# techmaster-test

./: README.md
01/: README.md
01/board_queen/: README.md  pubspec.yaml
01/board_queen/lib/: main.dart
01/board_queen/linux/: CMakeLists.txt
01/board_queen/test/: widget_test.dart
01/board_queen/web/: index.html  manifest.json
01/board_queen/windows/: CMakeLists.txt
02/: README.md
02/eight_queens/: pubspec.yaml
02/eight_queens/lib/: main.dart
02/eight_queens/linux/: CMakeLists.txt
02/eight_queens/test/: widget_test.dart
02/eight_queens/web/: index.html
02/eight_queens/windows/: CMakeLists.txt
03/: README.md
03/eight_queens/: README.md  ffigen.yaml  pubspec.yaml
03/eight_queens/android/: build.gradle  settings.gradle
03/eight_queens/example/: README.md  pubspec.yaml
03/eight_queens/ios/: eight_queens.podspec
03/eight_queens/lib/: eight_queens.dart  eight_queens_bindings_generated.dart
03/eight_queens/linux/: CMakeLists.txt
03/eight_queens/macos/: eight_queens.podspec
03/eight_queens/src/: CMakeLists.txt  eight_queens.c  eight_queens.h
03/eight_queens/windows/: CMakeLists.txt
04/: README.md
04/selection_sort/: README.md  ffigen.yaml  pubspec.yaml
04/selection_sort/android/: build.gradle  settings.gradle
04/selection_sort/example/: README.md  pubspec.yaml
04/selection_sort/ios/: selection_sort.podspec
04/selection_sort/lib/: selection_sort.dart  (+1 more)
04/selection_sort/src/: .clang-format  CMakeLists.txt  selection_sort.c  selection_sort.h
05/: README.md
05/touch_triangle/: README.md  pubspec.yaml
(+78 files in other folders)
